# video2ascii

./: .gitignore  Cargo.toml  LICENSE  README.md  README_CN.md
src/: main.rs  render.rs  termctl.rs  videoinput.rs
