[package]
name = "video2ascii"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opencv = { version = "0.63.0", features = ["rgb"] }
ansi_rgb = "0.2.0"
rgb = "0.8"
clap = { version = "3.1.6", features = ["derive"] }
